adding in gitignore qt ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,28 @@
 *.x86_64
 *.hex
 /exe
+/GUI/build-QuizGUI-Desktop_Qt_5_4_0_GCC_64bit-Debug/
 
-# Test Files
+# Qt-es
+/.qmake.cache
+/.qmake.stash
+*.pro.user
+*.pro.user.*
+*.qbs.user
+*.qbs.user.*
+*.moc
+moc_*.cpp
+qrc_*.cpp
+ui_*.h
+Makefile*
+*-build-*
+
+# QtCreator
+*.autosave
+
+#QtCtreator Qml
+*.qmlproject.user
+*.qmlproject.user.*
+
+# Quiz Files
 *.qz
